# algorithms

./: .gitignore  .gitmodules  Aho-Corasick  knuth-morris-pratt  main  z-func
C++ course homework/: string.cpp  string.hpp  string_test.cpp
C++ course homework/answers/: biginteger.h  deque.h  geometry.h  matrix.h  stack.cpp  string.h
C++ course homework/string/: CMakeLists.txt  Makefile  string_test.cpp
DA/cp/: CMakeLists.txt  aboba.cpp  azip.cpp  bencmark.cpp  binary_reader.cpp  binary_writer.py  bwt_mtf_rle.cpp  bwt_test.py  file-gen.py  input.txt  output.txt
DA/cp/report/src/: banchmark.tex  literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
DA/cp/src/: binary_tree.cpp  binary_tree.hpp  bitio.cpp  bitio.hpp  const.hpp  hashing.cpp  hashing.hpp  suffix_array.cpp  suffix_array.hpp  suffix_tree.hpp  treap.cpp  treap.hpp  utils.cpp  utils.hpp
DA/cp/src/encoders/: bwt.cpp  bwt.hpp  huffman.cpp  huffman.hpp  mtf.cpp  mtf.hpp  rle.cpp  rle.hpp
DA/cp/test/: tests.cpp
DA/cp/test/static/texts/: random_file.az.az.az
DA/lab1/: 4-2-test.cpp  4-2.cpp  a.out  benchmark.cpp  test-gen.py
DA/lab2/: 213  CMakeLists.txt  CMakeLists2.txt  Makefile  example_input.txt  main.cpp  rb.cpp  treap
DA/lab2/benchmark/: benchmark.cpp  profile  test-gen.py
DA/lab2/include/: rb.hpp
DA/lab2/report/src/: banchmark.tex  literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
DA/lab2/src/: rb.cpp  treap.cpp
DA/lab2/test/: test.cpp
DA/lab4/: AhoCorasickJocker.cpp  benchmark.cpp  benchmark_input.txt  input  main.cpp  sample_input.txt  test-gen.py
DA/lab5/: benchmark.cpp  benchmark2.cpp  data-gen.py  error-input.txt  output.txt  suffix-array.cpp
DA/lab7/: ascending.cpp  descending.cpp  descending_no_memo.cpp
DA/lab8/: greedy  greedy.cpp  greedy2.cpp  input2.txt
DA/lab9/: main.cpp
MAI-contests/01.10.23/: 1.cpp  4.cpp  test.cpp  test.py
MAI-contests/06.10.2024/: f.cpp  input.txt  output.txt  test.py
MAI-contests/10.03.24/: F.cpp  M.cpp  input.txt
MAI-contests/10.09.23/: 1.txt  b.cpp  d.cpp  l.cpp
MAI-contests/13.10.22 Num Theory, Euclid, Eratoshen/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  g.cpp  h.cpp  i.cpp
SBD/: in2_b_3  in2_b_4  in2_b_5  in2_c_1  in2_c_3  in2_c_4  platon.cpp  task1.cpp  task2.cpp  task21.cpp  task22.cpp  task222.cpp  task23.cpp
algorithms/: Aho-Corasick-optimize.cpp  Aho-Corasick.cpp  a.out  apostolico-giancarlo.cpp  black-red-tree.cpp  boyer-moore.cpp  input  knuth-morris-pratt.cpp  min-stack-queue-dequeue.cpp  q_rsqrt.cpp  radix-quick-compare.cpp  sieveOfEratosthenes.cpp  treap.cpp  tree-traversals.cpp  z-func.cpp
algorithms/AVL/: CMakeLists.txt  Makefile  main.cpp
algorithms/AVL/include/: AVL.hpp
algorithms/AVL/src/: AVL.cpp
algorithms/AVL/test/: test.cpp
codeforces/: LR-remainders.cpp  levenshtein-distance.cpp  palindrome.cpp  scc.cpp  very-easy-problem.cpp
coderun/: 1.cpp  115.cpp  13.cpp  18.cpp  18.py  18_input.txt  19.cpp  19.py  2.cpp  213.cpp  22-min-queue.cpp  22.cpp  28.cpp  4.cpp  405.cpp  422.cpp  423.cpp  424.cpp  424_benchmark.cpp  430.cpp  436.cpp  437.cpp  438.cpp  439.cpp  442.cpp  442_benchmark.cpp  442_input.txt  447.cpp  447_input.txt  55.cpp  6.cpp  65.cpp  67.cpp  69.cpp  70.cpp  74.cpp  81.cpp
leetcode/: 100.cpp  1004_1.cpp  1004_2.cpp  1004_solve_again.cpp  101_1.cpp  101_2.cpp  102_1.cpp  102_2.cpp  104_1.cpp  104_2.cpp  104_3.cpp  104_4.cpp  11.cpp  110.cpp  1143.cpp  121_1.cpp  121_2.cpp  125.cpp  128.cpp  128.py  138_1.cpp  138_2.cpp  138_3_IMBA_RESHENIE.cpp  141_1.cpp  141_2.cpp  143_1.cpp  143_2.cpp  1448.cpp  146.cpp  1493_1.cpp  1493_2.cpp  1493_solve_again.cpp  150.cpp  153.cpp  155.cpp  15_1.cpp  15_2.cpp  15_3.cpp  1650_benchmark.cpp  167.cpp  (+104 more)
rucode/: 1.in  a.cpp  b.cpp  b.py  d.cpp  f.cpp  g.cpp  h.cpp  i.cpp  j.cpp  j.txt  m.cpp  m.py  test.py
yandex-selections/: main.cpp
(+192 files in other folders)
